Minor structure improvements

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <h3>Usage</h3>
 
-<p>Checkout <a href="https://github.com/filipkis/endev/blob/master/README.md">documentation</a> for instructions on usage.</p>
+<p>Checkout <a href="https://www.endevjs.org/tutorial">tutorial</a> for instruction on how to use.</p>
 
 </section>
       <footer>
