--- a/tutorial/tutorial-00.html
+++ b/tutorial/tutorial-00.html
@@ -1,22 +1,28 @@
-<div class="well">
-    <p>The goal of the tutorial is to get familiar with Endev and how to use it for rapid prototyping. To achieve this you will:</p>
-    <ul>
-        <li>Learn about Endev on-the-fly creation of own data</li>
-        <li>Learn about the real-time&nbsp;nature of Endev&rsquo;s own data and storing it in the cloud</li>
-        <li>Learn about accessing API data (through YQL or REST)</li>
-        <li>Combine data from different data sources using Endev</li>
-        <li>Provide feedback on Endev&rsquo;s design</li>
-        <!--<li><span class="c20">(Advanced) Find out behind the scenes explanation of Endev&rsquo;s core (Angular, Firebase, YQL)</span></li>-->
-    </ul>
+<!--<div class="well">-->
+    <!--<p>The goal of the tutorial is to get familiar with Endev and how to use it for rapid prototyping. To achieve this you will:</p>-->
+    <!--<ul>-->
+        <!--<li>Learn about Endev on-the-fly creation of own data</li>-->
+        <!--<li>Learn about the real-time&nbsp;nature of Endev&rsquo;s own data and storing it in the cloud</li>-->
+        <!--<li>Learn about accessing API data (through YQL or REST)</li>-->
+        <!--<li>Combine data from different data sources using Endev</li>-->
+        <!--<li>Provide feedback on Endev&rsquo;s design</li>-->
+        <!--&lt;!&ndash;<li><span class="c20">(Advanced) Find out behind the scenes explanation of Endev&rsquo;s core (Angular, Firebase, YQL)</span></li>&ndash;&gt;-->
+    <!--</ul>-->
 </div>
-<h2 ><a></a>0. Rapid prototyping, no JavaScript, declarative annotations and data</h2>
+<!--<h2 ><a></a>0. Rapid prototyping, no JavaScript, declarative annotations and data</h2>-->
 <p>The purpose of Endev is to empower non-programmers and programmers alike to build interactive interfaces that allow you to display and edit data. And to <b>do it fast</b>. That way you can quickly build a demo of your idea to test with the potential users or clients, or build&nbsp;an interface for your personal birthday wish list so that even your grandmother can use it :)</p>
 <!--<p>There are certain challenges we are faced with when working with data. From where you store it, how you read the data that&rsquo;s all around (more than 14k APIs out there) to the the technical challenges (spaghetti-code, endless callbacks, etc.). </p>-->
 <!--<p>Endev address these through two core principles: </p>-->
 <!--<p>First, <b>declarative annotations</b>&nbsp;hide the nitty-gritty aspects of writing code (that&rsquo;s often the same and repetitive) to access the data and instead lets you just say <b>what</b>&nbsp;data you want and <b>where</b>&nbsp;do you want it. </p>-->
 <!--<p>Second, by utilizing <b>cloud services </b>Endev removes certain configuration requirements (like installing a database to store your data) and overhead (programming a web server just so you can read APIs that don&rsquo;t support cross-origin resource sharing). </p>-->
-<p>So how does that look like? Let&rsquo;s find out&hellip;</p>
-<h3><a></a>About the tutorial setup</h3>
+<h4>Table of contents</h4>
+<ol>
+    <li><a href="#ch1">On-the-fly creation of own data</a></li>
+    <li><a href="#ch2">Real-time applications and data in the cloud</a></li>
+    <li><a href="#ch3">Accessing API data</a></li>
+    <li><a href="#ch4">Survey and final assignment</a></li>
+</ol>
+<h4>About the tutorial setup</h4>
 <p>Throughout the tutorial you will be shown examples of code and will be encouraged to play with it as well. The code will be presented in CodePen, an interactive tool for working with snippets of HTML. You can choose to stay inside CodePen and play there. You can freely modify the examples (by selecting <span class="logo-wrap" id="edit-area">
     <span target="_blank" href="http://codepen.io/filipkis/pen/LGyJzm" title="Edit on CodePen">
         Edit
