--- a/tutorial/tutorial-02.html
+++ b/tutorial/tutorial-02.html
@@ -83,8 +83,9 @@ glyphicon glyphicon-hand-up text-primary" data-toggle="tooltip" data-placement="
 </ul>
 
 <hr>
-<div style="padding-bottom: 20px">
-    <a href="#ch1" class="btn btn-primary">&lt; Previous</a>
+<div style="padding-bottom: 20px" class="text-center">
+    2/4
+    <a href="#ch1" class="btn btn-primary pull-left">&lt; Previous</a>
     <a href="#ch3" class="btn btn-primary pull-right">Next &gt;</a>
     <div class="clearfix"></div>
 </div>
