--- a/tutorial/tutorial-01.html
+++ b/tutorial/tutorial-01.html
@@ -83,8 +83,9 @@ glyphicon glyphicon-hand-up text-primary" data-toggle="tooltip" data-placement="
     <li>The data has, for now, been only stored in the browser</li>
 </ul>
 <hr>
-<div style="padding-bottom: 20px">
-    <a href="#start" class="btn btn-primary">&lt; Previous</a>
+<div style="padding-bottom: 20px" class="text-center">
+    1/4
+    <a href="#start" class="btn btn-primary pull-left">&lt; Previous</a>
     <a href="#ch2" class="btn btn-primary pull-right">Next &gt;</a>
     <div class="clearfix"></div>
 </div>
