--- a/tutorial/tutorial-03.html
+++ b/tutorial/tutorial-03.html
@@ -70,8 +70,9 @@ glyphicon glyphicon-pencil text-primary" data-toggle="tooltip" data-placement="b
 </ol>
 
 <hr>
-<div style="padding-bottom: 20px">
-    <a href="#ch2" class="btn btn-primary">&lt; Previous</a>
+<div style="padding-bottom: 20px" class="text-center">
+    3/4
+    <a href="#ch2" class="btn btn-primary pull-left">&lt; Previous</a>
     <a href="#ch4" class="btn btn-primary pull-right">Next &gt;</a>
     <div class="clearfix"></div>
 </div>
