Adding the tracking to chapter changes

--- a/tutorial/tutorial-00.html
+++ b/tutorial/tutorial-00.html
@@ -69,6 +69,6 @@
 
 <hr>
 <div style="padding-bottom: 20px">
-    <a href="#ch1" class="btn btn-primary pull-right">Start &gt;</a>
+    <a href="#ch1" class="btn btn-primary pull-right" ng-click="track('Chapter 1 started')">Start &gt;</a>
     <div class="clearfix"></div>
 </div>
