--- a/tutorial/tutorial-01.html
+++ b/tutorial/tutorial-01.html
@@ -85,8 +85,8 @@ glyphicon glyphicon-hand-up text-primary" data-toggle="tooltip" data-placement="
 <hr>
 <div style="padding-bottom: 20px" class="text-center">
     1/4
-    <a href="#start" class="btn btn-primary pull-left">&lt; Previous</a>
-    <a href="#ch2" class="btn btn-primary pull-right">Next &gt;</a>
+    <a href="#start" class="btn btn-primary pull-left" ng-click="track('Back to Tutorial Start')">&lt; Previous</a>
+    <a href="#ch2" class="btn btn-primary pull-right" ng-click="track('Chapter 2 started')">Next &gt;</a>
     <div class="clearfix"></div>
 </div>
 <script async src="//assets.codepen.io/assets/embed/ei.js"></script>
