--- a/tutorial/tutorial-02.html
+++ b/tutorial/tutorial-02.html
@@ -85,8 +85,8 @@ glyphicon glyphicon-hand-up text-primary" data-toggle="tooltip" data-placement="
 <hr>
 <div style="padding-bottom: 20px" class="text-center">
     2/4
-    <a href="#ch1" class="btn btn-primary pull-left">&lt; Previous</a>
-    <a href="#ch3" class="btn btn-primary pull-right">Next &gt;</a>
+    <a href="#ch1" class="btn btn-primary pull-left" ng-click="track('Back to Chapter 1')">&lt; Previous</a>
+    <a href="#ch3" class="btn btn-primary pull-right"ng-click="track('Chapter 3 started')">Next &gt;</a>
     <div class="clearfix"></div>
 </div>
 
