--- a/tutorial/tutorial-03.html
+++ b/tutorial/tutorial-03.html
@@ -72,8 +72,8 @@ glyphicon glyphicon-pencil text-primary" data-toggle="tooltip" data-placement="b
 <hr>
 <div style="padding-bottom: 20px" class="text-center">
     3/4
-    <a href="#ch2" class="btn btn-primary pull-left">&lt; Previous</a>
-    <a href="#ch4" class="btn btn-primary pull-right">Next &gt;</a>
+    <a href="#ch2" class="btn btn-primary pull-left" ng-click="track('Back to Chapter 2')">&lt; Previous</a>
+    <a href="#ch4" class="btn btn-primary pull-right" ng-click="track('Chapter 4 started')">Next &gt;</a>
     <div class="clearfix"></div>
 </div>
 
