--- a/tutorial/tutorial-04.html
+++ b/tutorial/tutorial-04.html
@@ -21,6 +21,8 @@
     And of course, any feedback is always welcome.
 </p>
 <hr>
-<div style="padding-bottom: 20px">
-    <p class="text-center"><b>THE END</b></p>
+<div style="padding-bottom: 20px" class="text-center">
+    <b>THE END</b>
+    <a href="#ch3" class="btn btn-primary pull-left" ng-click="track('Back to Chapter 3')">&lt; Previous</a>
+    <div class="clearfix"></div>
 </div>
