--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -34,8 +34,8 @@
                     case "JGJYjP": return "Tutorial 2.4";
                     case "pgwjOm": return "Tutorial 2.5";
                     case "MKobwv": return "Tutorial 3.1";
-                    case "obwWYm": return "Tutorial 3.2";
-                    case "BjZyom": return "Tutorial 3.3";
+                    case "obwWYm": return "Tutorial 3.3";
+                    case "ZQJGPo": return "Tutorial 3.2";
                 }
                 return "Unknown";
 
