Improving tutorial text and data results

--- a/tutorial/tutorial-01.html
+++ b/tutorial/tutorial-01.html
@@ -60,7 +60,7 @@ glyphicon glyphicon-hand-up text-primary" data-toggle="tooltip" data-placement="
 <h4><span class="glyphicon glyphicon-star text-primary" aria-hidden="true"></span> Do it yourself</h4>
 <p>To test your understanding and our design of Endev, here are some tasks for you to try yourself:</p>
 <ol>
-    <li><span class="glyphicon glyphicon-pencil text-primary" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Do it yourself"></span> Add a input box for adding also adding the price information  when creating an item on the list
+    <li><span class="glyphicon glyphicon-pencil text-primary" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Do it yourself"></span> Add a input box for adding the price information  when creating an item on the list
         <div from="firebase:Answers an" where="an.id = '1.1'" default="{'id':'1.1'}" auto-insert="true" auto-update>
             <textarea data-value="an.answer" placeholder="Write comments to assignment if you have any" cols="50" class="form-control"></textarea>
         </div><button class="btn btn-xs btn-primary" data-click="insert({'id':'1.1'})" insert-into="firebase:Answers">Add another</button>
