Updating meta tags

--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <meta property="og:image" content="http://www.endevjs.org/images/endev.png"/>
+    <meta property="og:description" content="The purpose of Endev is to empower non-programmers and programmers alike to build interactive interfaces that allow you to display and edit data."/>
     <script>
         endevAngularModulesToLoad = ["ngRoute"];
     </script>
